--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
 Flask>=2.0
 google-generativeai>=0.4 # Use a recent version known to work
 folium>=0.14 # Use a recent version
+python-dotenv>=0.19 # For loading .env file
